--- a/assets/widget/uexVideo.html
+++ b/assets/widget/uexVideo.html
@@ -41,6 +41,10 @@ window.uexOnload = function() {
 		}
 	};
 	
+	uexVideo.onCompletion = function(){
+		console.log("createPlay video completion callback test : video play completion");
+	}
+	
 	uexFileMgr.cbExplorer=function (opCode,dataType,data){
 		document.getElementById('file').innerHTML = data;
 		document.getElementById('hidText').value = data;
@@ -57,7 +61,9 @@ window.uexOnload = function() {
 	onclick="uexFileMgr.explorer('');"> <span>选择好的视频文件为：</span>
 <div class="tcxx" id="file"></div>
 <input id="hidText" type="hidden" value=""> <span>1.打开视频播放界面</span>
-<input class="btn" type="button" value="打开视频播放界面"
+<input class="btn" type="button" value="打开视频播放界面(creatPlay)"
+	onclick="uexVideo.creatPlay(50,50,500,1225,document.getElementById('hidText').value);">
+<input class="btn" type="button" value="打开视频播放界面(open)"
 	onclick="uexVideo.open(document.getElementById('hidText').value);">
 <span>2.录制视频</span> <input class="btn" type="button" value="录视频"
 	onclick="uexVideo.record();"> <span>录制好的视频文件地址为：</span>
@@ -66,6 +72,9 @@ window.uexOnload = function() {
 	type="button" value="播放选择的视频"
 	onclick="uexVideo.open(document.getElementById('hidPath').value);">
 	<br>
+	<input class="btn"
+	type="button" value="关闭(removePlay)"
+	onclick="uexVideo.removePlay();">
 </div>
 </div>
 </body>
