--- a/assets/widget/uexVideo.html
+++ b/assets/widget/uexVideo.html
@@ -61,8 +61,8 @@ window.uexOnload = function() {
 	onclick="uexFileMgr.explorer('');"> <span>选择好的视频文件为：</span>
 <div class="tcxx" id="file"></div>
 <input id="hidText" type="hidden" value=""> <span>1.打开视频播放界面</span>
-<input class="btn" type="button" value="打开视频播放界面(creatPlay)"
-	onclick="uexVideo.creatPlay(50,50,500,1225,document.getElementById('hidText').value);">
+<input class="btn" type="button" value="打开视频播放界面(createPlay)"
+	onclick="uexVideo.createPlay(50,50,500,1225,document.getElementById('hidText').value);">
 <input class="btn" type="button" value="打开视频播放界面(open)"
 	onclick="uexVideo.open(document.getElementById('hidText').value);">
 <span>2.录制视频</span> <input class="btn" type="button" value="录视频"
