--- a/assets/widget/qupai.html
+++ b/assets/widget/qupai.html
@@ -92,9 +92,8 @@
             }
         })
         appcan.button("#camera", "btn-act", function() {           
-
-
-
+            uexVideo.seekTo(10);
+            alert(2);
         })
     </script>
 </html>
