--- a/assets/widget/uexVideo.html
+++ b/assets/widget/uexVideo.html
@@ -18,8 +18,9 @@
 			var iScreenWidth = document.documentElement.clientWidth;
             var iVideoHeight = iScreenWidth * 9 / 16;
             var param = {
-                //src : "http://121.41.55.199/video/8a284e8f577507f50157a26c607b7a88.mp4",
-                src : "http://192.168.1.200/video/111.mp4",
+                //src : "https://admin.huihuabao.com/video/8a284e8f577507f50157a26c607b7a88.mp4",
+                //src : "http://192.168.1.200:81/media/222.m3u8",
+                src : "http://192.168.1.200:8080/video/media/222.m3u8",
                 title:"慧话宝家长会",
                 startTime : 0,
                 autoStart : true,
